ingress/appgestion-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appgestion
  namespace: appgestion
  labels:
    app.kubernetes.io/name: appgestion
    app.kubernetes.io/component: ingress
spec:
  ingressClassName: traefik

  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
